Restructuring build for jpackage